[ADD] #748 Tender: Summary Progress PP Add Confirmation as Category Type

--- a/purchase_indonesia/views/inherit_purchase_tender.xml
+++ b/purchase_indonesia/views/inherit_purchase_tender.xml
@@ -357,7 +357,7 @@
 			<field name="model">v.summary.progress.pp.report</field>
 			<field name="priority" eval="1"/>
 			<field name="arch" type="xml">
-			    <tree decoration-bf="id in (1,2,9,11,16)">
+			    <tree decoration-bf="id in (1,2,12,14,19)">
 			        <field name="company_name"/>
 			        <field name="category_name"/>
 			        <field name="ho"/>
@@ -459,6 +459,7 @@
 			        <field name="request_id"/>
 			        <field name="company_id"/>
 			        <field name="category"/>
+			        <field name="pr_state"/>
 			        <field name="is_po_done"/>
 			        <field name="pic"/>
 			        <field name="qcf_id"/>
