[ADD] estate: #759 nursery activity on planted location
* Set activity constrains based on location type

--- a/estate/views/estate_activity_view.xml
+++ b/estate/views/estate_activity_view.xml
@@ -64,6 +64,7 @@
                             <group name="type" string="Activity">
                                 <field name="code"/>
                                 <field name="activity_type"/>
+                                <field name="location_type"/>
                             </group>
                         </group>
 
