--- a/estate/views/estate_upkeep.xml
+++ b/estate/views/estate_upkeep.xml
@@ -495,6 +495,7 @@
                             <group name="top">
                                 <field name="employee_id" attrs="{'readonly': [('state','not in',('draft','confirmed'))]}"/>
                                 <field name="upkeep_team_employee_id" string="Team Leader" attrs="{'readonly': [('state','not in',('draft','confirmed'))]}"/>
+                                <field name="upkeep_date"/>
                             </group>
                             <group name="top_right">
                                 <field name="employee_company_id" readonly="True"/>
