--- a/estate/views/estate_upkeep.xml
+++ b/estate/views/estate_upkeep.xml
@@ -98,8 +98,10 @@
                                 context="{'group_by': 'company_id'}"/>
                         <filter name="by_estate" string="Estate"
                                 context="{'group_by': 'estate_id'}"/>
-                        <filter name="by_division" string="Division"
+                        <filter name="by_division" string="Division (Employee)"
                                 context="{'group_by': 'division_id'}"/>
+                        <filter name="by_division_location" string="Division (Location)"
+                                context="{'group_by': 'division_location_id'}"/>
                         <filter name="by_team" string="Team"
                                 context="{'group_by': 'upkeep_team_id'}"/>
                         <filter name="by_employee" string="Employee"
@@ -320,6 +322,7 @@
                                         <field name="activity_id" string="Activity"
                                                 options="{'no_create_edit': True}"/>
                                         <field name="location_id" string="Location" options="{'no_create_edit': True}"/>
+                                        <field name="division_location_id" options="{'no_create_edit': True}"/>
                                         <field name="planted_year_id" string="PY"/>
                                         <field name="attendance_code_id" string="Attn."
                                                 options="{'no_create': True}"/>
@@ -359,7 +362,8 @@
                                         <field name="product_uom_id" string="UoM"/>
                                         <field name="amount"/>
                                         <field name="activity_id" string="Activity" options="{'no_create': True}"/>
-                                        <field name="location_id"/>
+                                        <field name="location_id" options="{'no_create_edit': True}"/>
+                                        <field name="division_location_id" options="{'no_create_edit': True}"/>
                                         <field name="activity_uom_id" string="UoM"/>
                                         <!-- Do not remove field below -->
                                         <field name="activity_unit_amount" string="Act. Qty." invisible="True"/>
@@ -510,6 +514,7 @@
                                     <group>
                                         <field name="activity_id" attrs="{'readonly': [('state','not in',('draft','confirmed'))]}"/>
                                         <field name="activity_uom_id" readonly="True" class="oe_inline"/>
+                                        <field name="division_id" attrs="{'readonly': [('state','not in',('draft','confirmed'))]}"/>
                                         <field name="location_id" attrs="{'readonly': [('state','not in',('draft','confirmed'))]}"/>
                                     </group>
                                     <group>
@@ -700,8 +705,10 @@
                                 context="{'group_by': 'company_id'}"/>
                         <filter name="by_estate" string="Estate"
                                 context="{'group_by': 'estate_id'}"/>
-                        <filter name="by_division" string="Division"
+                        <filter name="by_division" string="Division (Employee)"
                                 context="{'group_by': 'division_id'}"/>
+                        <filter name="by_division_location" string="Division (Location)"
+                                context="{'group_by': 'division_location_id'}"/>
                         <separator/>
                         <filter name="by_activity" string="Activity"
                                 context="{'group_by': 'activity_id'}"/>
