[FIX] estate_stock: stock picking did not created properly
* #793 - stock picking didn't include material order company
* #797 - general material order location empty

--- a/estate_stock/views/material_order_view.xml
+++ b/estate_stock/views/material_order_view.xml
@@ -120,7 +120,7 @@
                                        attrs="{'required': [('type', '!=', 'general')], 'readonly': [('type', '!=', 'estate')]}"/>
                                 <field name="activity_id"
                                        domain="[('activity_type', '=', type)]"
-                                       attrs="{'readonly': [('type', '=', 'general')], 'required': [('type', '!=', 'general')]}"/>
+                                       attrs="{'required': [('type', '!=', 'general')], 'readonly': [('type', '!=', 'estate')]}"/>
                                 <field name="product_id"/>
                                 <field name="product_uom_id"/>
                                 <field name="product_uom_qty"/>
