[ADD] hr_indonesia: #798 - scheduled resign
* no resign date
* employee was archived withouth resign date constraints (month+1)

--- a/hr_indonesia/views/hr_indonesia_view.xml
+++ b/hr_indonesia/views/hr_indonesia_view.xml
@@ -24,6 +24,7 @@
                                 <field name="contract_type"/>
                                 <field name="contract_period"/>
                                 <field name="joindate"/>
+                                <field name="resigndate"/>
                                 <field name="internship"/>
                                 <field name="outsource"/>
                                 <field name="office_level_id"/>
