[ADD] #799 Product Category: Adding Allowed Company

--- a/purchase_indonesia/views/inherit_product_category.xml
+++ b/purchase_indonesia/views/inherit_product_category.xml
@@ -11,6 +11,7 @@
                     <group name="procurement_technical_checker" string="Procurement Setting" colspan="2">
                         <field name="technical_checker"/>
                         <field name="code"/>
+                        <field name="allowed_company_ids" widget="many2many_tags"/>
                     </group>
                 </xpath>
             </field>
