[ADD] #796 SLA Procurement Create Report View, add column vendor

--- a/purchase_indonesia/views/procurement_report_views.xml
+++ b/purchase_indonesia/views/procurement_report_views.xml
@@ -10,6 +10,7 @@
 			        <field name="pr_no"/>
 			        <field name="urgency"/>	
 			        <field name="po_no"/>
+			        <field name="partner"/>
 			        <field name="pp_location_code"/>
 			        <field name="vendor_location_code"/>
 			        <field name="distance"/>
